--- a/日常/书怪.ini
+++ b/日常/书怪.ini
@@ -1,7 +1,7 @@
 [配置版本]
 版本号=v3.88
 [默认脚本列表]
-主脚本=自动捡物-开启~沧州阵法副本#1#0~荡寇副本#0#0~地下古城#0#0~自动捡物-关闭~冰魄洞副本#0#0~太尉宝库副本#0#0~食人谷副本#0#0~黑风岭副本#0#0~落雪山副本#0#0~
+主脚本=景阳岗-书怪#1#1~黄泥冈-书怪#0#1~柴家庄-书怪#0#1~冰魄门票-红角兽王#0#1~黄泥冈-蒙汗药#0#1~买药#万年灵芝#300#400~
 [基本]
 技能名称=普通攻击
 药品名称=万年灵芝
