--- a/清理背包.ini
+++ b/清理背包.ini
@@ -29,7 +29,7 @@
 标准模式战场名字=西门无敌部&nbsp;VS&nbsp;叶一城部
 [存取]
 取出物品列表=柳虫皮|800~大柳虫皮|600~青蛇皮|400~青蛇胆|200~
-存仓物品列表=大白菜~柳虫皮~大柳虫皮~青蛇皮~青蛇胆~
+存仓物品列表=大白菜~柳虫皮~大柳虫皮~青蛇皮~青蛇胆~虎骨~黄金虎骨~
 [额外物品列表]
 拾取物品列表=高级~天书油墨~神奇丹药~训练术~元神~双倍~四倍~星光~赤霄~声望~
 开启拾取额外物品=真
@@ -39,7 +39,7 @@
 [招补兵列表]
 招补兵列表=补兵|鲁智深|铁甲枪兵|1~
 [清包]
-垃圾物品列表=黑松果~黑狼毛~玉心战甲~单刀（士兵）~长剑~野狗皮~钢剑~单刀~【星辰~【神行~【踏云~残缺刀~禅杖~秀才服~追风枪~玉心盔甲~布帽~
+垃圾物品列表=黑松果~黑狼毛~玉心战甲~单刀（士兵）~长剑~野狗皮~钢剑~单刀~【星辰~【神行~【踏云~残缺刀~禅杖~秀才服~追风枪~玉心盔甲~布帽~烂白菜~虎皮残骸~
 [赠送]
 赠送物品列表=高级万虫羹|100~
 好友名字=枭雄帝王XXXXXXXX人V3.93
