--- a/材料/大白菜+毒液.ini
+++ b/材料/大白菜+毒液.ini
@@ -1,7 +1,7 @@
 [配置版本]
 版本号=v3.88
 [默认脚本列表]
-主脚本=自动捡物-开启~沧州阵法副本#1#0~荡寇副本#0#0~地下古城#0#0~自动捡物-关闭~冰魄洞副本#0#0~太尉宝库副本#0#0~食人谷副本#0#0~黑风岭副本#0#0~落雪山副本#0#0~
+主脚本=自动捡物-关闭~大白菜+毒液#0#1~
 [基本]
 技能名称=普通攻击
 药品名称=万年灵芝
@@ -29,7 +29,7 @@
 标准模式战场名字=西门无敌部&nbsp;VS&nbsp;叶一城部
 [存取]
 取出物品列表=柳虫皮|800~大柳虫皮|600~青蛇皮|400~青蛇胆|200~
-存仓物品列表=虎骨~黄金虎骨~龙鳞~
+存仓物品列表=大白菜~柳虫皮~大柳虫皮~青蛇皮~青蛇胆~
 [额外物品列表]
 拾取物品列表=高级~天书油墨~神奇丹药~训练术~元神~双倍~四倍~星光~赤霄~声望~
 开启拾取额外物品=真
@@ -37,7 +37,7 @@
 [装备修理列表]
 装备修理列表=鲁智深|铁甲枪兵|不修理坐骑~
 [招补兵列表]
-招补兵列表=补兵|鲁智深|铁甲枪兵|最大~
+招补兵列表=补兵|鲁智深|铁甲枪兵|1~
 [清包]
 垃圾物品列表=黑松果~黑狼毛~玉心战甲~单刀（士兵）~长剑~野狗皮~钢剑~单刀~【星辰~【神行~【踏云~残缺刀~禅杖~秀才服~追风枪~玉心盔甲~布帽~烂白菜~虎皮残骸~
 [赠送]
