--- a/材料/柳虫-蛇胆-蜂王-龟壳-龙皮-虎皮.ini
+++ b/材料/柳虫-蛇胆-蜂王-龟壳-龙皮-虎皮.ini
@@ -1,7 +1,7 @@
 [配置版本]
 版本号=v3.88
 [默认脚本列表]
-主脚本=大小柳虫皮+蛇皮+蛇胆#0#0~蜂王浆+龟壳+龙皮#0#0~流花河地图#0#0~景阳岗虎皮#0#0~黄泥冈-蒙汗药#1#1~
+主脚本=大小柳虫皮+蛇皮+蛇胆#0#0~蜂王浆+龟壳+龙皮#0#0~景阳岗虎皮#0#0~
 [基本]
 技能名称=普通攻击
 药品名称=万年灵芝
@@ -31,7 +31,7 @@
 取出物品列表=柳虫皮|800~大柳虫皮|600~青蛇皮|400~青蛇胆|200~
 存仓物品列表=大白菜~柳虫皮~大柳虫皮~青蛇皮~青蛇胆~
 [额外物品列表]
-拾取物品列表=高级~天书油墨~神奇丹药~训练术~元神~双倍~四倍~星光~赤霄~
+拾取物品列表=高级~天书油墨~神奇丹药~训练术~元神~双倍~四倍~星光~赤霄~声望~
 开启拾取额外物品=真
 背包满后中断挂机=真
 [装备修理列表]
@@ -39,7 +39,7 @@
 [招补兵列表]
 招补兵列表=补兵|鲁智深|铁甲枪兵|1~
 [清包]
-垃圾物品列表=钢剑~丝绸~野狗皮~钢刀~布帽~布衣~单刀~行军散~长剑~重剑~精铁~金创药~丝绸衣~巨型~官家~百战~太尉战甲~残阳~玉清~玉缕~纸钱~黑松果~黑狼毛~正气~造化~追风~精钢~玉心~杨家五合枪~踏云衣~踏云项链~踏云手套~踏云戒指~踏云裤子~踏云鞋子~踏云剑~踏云刀~踏云枪~踏云斧~踏云棍~
+垃圾物品列表=黑松果~黑狼毛~玉心战甲~单刀（士兵）~长剑~野狗皮~钢剑~单刀~【星辰~【神行~【踏云~残缺刀~禅杖~秀才服~追风枪~玉心盔甲~布帽~烂白菜~虎皮残骸~
 [赠送]
 赠送物品列表=高级万虫羹|100~
 好友名字=枭雄帝王XXXXXXXX人V3.93
