--- a/模板.ini
+++ b/模板.ini
@@ -1,7 +1,7 @@
 [配置版本]
 版本号=v3.88
 [默认脚本列表]
-主脚本=景阳岗-书怪#1#1~黄泥冈-书怪#0#1~柴家庄-书怪#0#1~冰魄门票-红角兽王#0#1~黄泥冈-蒙汗药#0#1~买药#万年灵芝#300#400~
+主脚本=
 [基本]
 技能名称=普通攻击
 药品名称=万年灵芝
@@ -29,7 +29,7 @@
 标准模式战场名字=西门无敌部&nbsp;VS&nbsp;叶一城部
 [存取]
 取出物品列表=柳虫皮|800~大柳虫皮|600~青蛇皮|400~青蛇胆|200~
-存仓物品列表=大白菜~柳虫皮~大柳虫皮~青蛇皮~青蛇胆~
+存仓物品列表=虎骨~黄金虎骨~龙鳞~
 [额外物品列表]
 拾取物品列表=高级~天书油墨~神奇丹药~训练术~元神~双倍~四倍~星光~赤霄~声望~
 开启拾取额外物品=真
@@ -37,9 +37,9 @@
 [装备修理列表]
 装备修理列表=鲁智深|铁甲枪兵|不修理坐骑~
 [招补兵列表]
-招补兵列表=补兵|鲁智深|铁甲枪兵|1~
+招补兵列表=补兵|鲁智深|铁甲枪兵|最大~
 [清包]
-垃圾物品列表=钢刀~黑松果~黑狼毛~
+垃圾物品列表=黑松果~黑狼毛~玉心战甲~单刀（士兵）~长剑~野狗皮~钢剑~单刀~【星辰~【神行~【踏云~残缺刀~禅杖~秀才服~追风枪~玉心盔甲~布帽~烂白菜~虎皮残骸~
 [赠送]
 赠送物品列表=高级万虫羹|100~
 好友名字=枭雄帝王XXXXXXXX人V3.93
